@@ -9,6 +9,8 @@
 (straight-use-package '(discourse :host codeberg :repo "glenneth/discourse-emacs"))
 (straight-use-package '(eat :files ("*.el" "*.texi" "*.info" "integration" "term" "terminfo")))
 (straight-use-package '(eldoc-diffstat :host github :repo "kljohann/eldoc-diffstat"))
+(straight-use-package '(exwm :host github :repo "emacs-exwm/exwm"))
+(straight-use-package '(exwm-firefox :host codeberg :repo "emacs-weirdware/exwm-firefox"))
 (straight-use-package '(gptel-quick :host github :repo "karthink/gptel-quick"))
 (straight-use-package '(image-slicing :host github :repo "ginqi7/image-slicing"))
 (straight-use-package '(nerd-icons-multimodal :host github :repo "abougouffa/nerd-icons-multimodal"))
@@ -16,6 +18,7 @@
 (straight-use-package '(popon :fork (:host codeberg :repo "fuzy/emacs-popon")))
 (straight-use-package '(rime :fork (:host github :repo "fuzy112/emacs-rime")))
 (straight-use-package '(term-keys :host github :repo "CyberShadow/term-keys"))
+(straight-use-package '(xelb :host github :repo "emacs-exwm/xelb"))
 (straight-use-package 'adaptive-wrap)
 (straight-use-package 'anaphora)
 (straight-use-package 'apheleia)
